Fixed Heart Issue on iPhone

--- a/src/components/View/frontend.css
+++ b/src/components/View/frontend.css
@@ -264,7 +264,7 @@ overflow-x: hidden;
     cursor: pointer;
     padding: 10px;
     z-index: 99;
-    touch-action: manipulation;
+    
   }
 
   .favorite svg{
